feat(lessons): created lesson module
